--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
       </includes>
       </resource>
     </resources>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-plugin-plugin</artifactId>
+        <version>3.5.2</version>
+      </plugin>
+    </plugins>
   </build>
 
 </project>
