--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>paroxayte</groupId>
+  <groupId>com.github.paroxayte</groupId>
   <artifactId>selfexec-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>0.13</version>
+  <version>v1.0</version>
   <name>selfexec-maven-plugin Maven Mojo</name>
   <url>http://maven.apache.org</url>
    <properties>
