--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.github.paroxayte</groupId>
   <artifactId>selfexec-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>v1.1</version>
+  <version>v1.2</version>
   <name>selfexec-maven-plugin Maven Mojo</name>
   <url>http://maven.apache.org</url>
    <properties>
@@ -44,6 +44,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-plugin-plugin</artifactId>
         <version>3.5.2</version>
+        <configuration>
+          <goalPrefix>selfexec</goalPrefix>
+        </configuration>
       </plugin>
     </plugins>
   </build>
