--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
   <groupId>com.github.paroxayte</groupId>
   <artifactId>selfexec-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>v1.4</version>
-  <name>selfexec-maven-plugin Maven Mojo</name>
-  <url>http://maven.apache.org</url>
+  <version>v1.5.0</version>
+  <name>selfexec-maven-plugin</name>
+  <url>https://github.com/paroxayte/selfexec-maven-plugin</url>
+  
    <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -25,21 +26,9 @@
       <version>3.5.2</version>
       <scope>compile</scope>
     </dependency>
-    <dependency>
-      <groupId>org.jooq</groupId>
-      <artifactId>jool-java-8</artifactId>
-      <version>0.9.13</version>
-    </dependency>
   </dependencies>
+
   <build>
-  <resources>
-    <resource>
-      <directory>${project.basedir}</directory>
-      <includes>
-        <include>stub.sh</include>
-      </includes>
-      </resource>
-    </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
